(1) adding ie11 specific fixes for tile hover margins (used to overlap), (2) updating quote component styles to not exceed parent container

--- a/src/scss/grommet-core/_objects.quote.scss
+++ b/src/scss/grommet-core/_objects.quote.scss
@@ -1,7 +1,7 @@
 .quote {
   border-width: $inuit-base-spacing-unit;
   border-style: solid;
-  max-width: calc(100vw - #{double($inuit-base-spacing-unit)});
+  max-width: 100%;
 
   &--small {
     width: $size-xsmall;
